// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alignment component > should align content to center 1`] = `
<div
  class="alignment"
/>
`;

exports[`Alignment component > should center content 1`] = `
<div
  class="alignment undefined"
/>
`;

exports[`Alignment component > should justify content to center 1`] = `
<div
  class="alignment undefined"
/>
`;

exports[`Alignment component > should render correctly 1`] = `
<div
  class=""
>
  Alignment
</div>
`;
